--- a/public/index.html
+++ b/public/index.html
@@ -557,8 +557,21 @@
                               <div class="on-hover-block">
                                  <p class="paragraph light inside-card">Taghazout est l'endroit idéal pour profiter des plages tranquilles ou découvrir une scène de surf dynamique, tout en offrant une atmosphère décontractée.</p>
                                  <div class="button-pill inside-travel-type">
-                                    <div class="button-text">
-            
+                                    <div class="button-text">En savoir plus</div>
+                                 </div>
+                              </div>
+                           </a>
+                           <div class="mobile-content">
+                              <p class="paragraph-2">Explorez les plages pittoresques de Taghazout, un lieu parfait pour ceux en quête de détente ou de nouvelles aventures en surf.</p>
+                              <div class="button-pill outside-travel-type">
+                                 <div class="button-text dark">En savoir plus</div>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>            
             <div class="travel-type-content-slide"><a href="#" class="arrow-block travel-prev w-inline-block"><img src="/images/rightblackarrow.svg" loading="lazy" alt="icon" class="right-arrow smaller _180degs"></a><a href="#" class="arrow-block travel-next w-inline-block"><img src="/images/rightblackarrow.svg" loading="lazy" alt="icon" class="right-arrow smaller"></a></div>
          </div>
       </div>
