--- a/public/contact.html
+++ b/public/contact.html
@@ -565,7 +565,7 @@
                      </div>
                      <div class="footer-blocks">
                         <div class="footer-category-title">À propos de taxistomarrakech</div>
-                        <a href="/propos.html" class="footer-text-link customtrans">L'histoire de taxistomarrakech</a><a href="/propos.html" class="footer-text-link bottom-text customtrans">Notre Philosophie pour les Transferts</a>
+                        <a href="/propos.html" class="footer-text-link customtrans">L'histoire de taxistomarrakech</a><a href="/propos.html" class="footer-text-link bottom-text customtrans">Notre Philosophie pour les Transferts</a><a href="https://taxitoagafay.com/" class="footer-text-link bottom-text customtrans">TaxiToAgafay</a>
                      </div>
                   </div>
                   <div id="w-node-_0bc9dc09-0a6f-f497-6757-511d1ccc0095-1ccc0081" class="footer-blocks">
