--- a/public/taxi-marrakech.html
+++ b/public/taxi-marrakech.html
@@ -344,7 +344,7 @@
           
                 <div class="trip-highlights-block show-up">
                   <div class="word-mask">
-                    <h2 class="h2 trip-h3 hide-mobile fade-up3 tricks">Réservez un Taxi à Marrakech pour Découvrir ses Merveilles</h2>
+                    <h2 class="h2 trip-h3 hide-mobile fade-up3 tricks">Réservez un Taxi à Marrakech</h2>
                   </div>
                   <div class="rich-text-wrapper">
                     <div class="destinations-rich-text w-richtext">
