--- a/public/marrakech.html
+++ b/public/marrakech.html
@@ -352,7 +352,7 @@
                         Marrakech, joyau du Maroc, fascine par sa médina animée, ses souks colorés et ses palais somptueux. Pour une expérience sans tracas, optez pour un <strong>taxi à Marrakech</strong> pour vos déplacements, visites et transferts depuis l’aéroport. <strong>Réservez facilement votre taxi Marrakech</strong> pour un transport confortable et rapide à travers la ville.
                       </p>
                       <p>
-                        Explorez la <strong>Ville Rouge</strong> où les traditions ancestrales rencontrent l'effervescence contemporaine. Assurez-vous de réserver un <strong>taxi à Marrakech</strong> pour profiter pleinement de votre séjour, avec un transport fiable et au meilleur prix.
+                        Explorez la <strong>Ville Rouge</strong> où les traditions ancestrales rencontrent l'effervescence contemporaine. Assurez-vous de réserver un taxi à Marrakech pour profiter pleinement de votre séjour, avec un transport fiable et au meilleur prix.
                       </p>
                     </div>
                   </div>
