--- a/public/marrakech.html
+++ b/public/marrakech.html
@@ -366,7 +366,7 @@
                 <div id="w-node-_0181651a-de94-1cf4-5ed4-61e7d19f4060-29c2d988" class="activities-block">
                   <h2 class="h3 trip-h3">Activités à Découvrir avec un Taxi à Marrakech</h2>
                   <p class="paragraph activities">
-                    Plongez dans la magie de la médina, visitez des palais somptueux, déambulez dans les souks aux senteurs enivrantes, et profitez des jardins luxuriants. <strong>Réservez un taxi à Marrakech</strong> pour explorer ces lieux facilement et sans souci. Vous pourrez découvrir la <strong>Ville Rouge</strong> dans tout son éclat grâce à un transport rapide et confortable.
+                    Plongez dans la magie de la médina, visitez des palais somptueux, déambulez dans les souks aux senteurs enivrantes, et profitez des jardins luxuriants. <strong>Réservez un taxi à Marrakech</strong> pour explorer ces lieux facilement et sans souci. Vous pourrez découvrir la Ville Rouge dans tout son éclat grâce à un transport rapide et confortable.
                   </p>
                 </div>
           
