--- a/public/essaouira.html
+++ b/public/essaouira.html
@@ -440,7 +440,7 @@
                   <h3 class="h3 trip-h3">Nos Tarif</h3>
                   <table>
                      <tr>
-                        <th>Trajet</th>
+                        <th>Trajets</th>
                         <th>Personnes</th>
                         <th>Prix</th>
                         <th>Personnes</th>
