--- a/public/taghazout.html
+++ b/public/taghazout.html
@@ -446,7 +446,7 @@
             <div class="container limit-container">
                <div id="tarif" class="w-layout-grid activities-grid set">
                   <style>table{font-family:"Helvetica Neue",sans-serif;border-collapse:collapse;width:100%;color:#353b2a}td,th{border:1px solid #ddd;text-align:left;padding:14px}tr:nth-child(even){background-color:#ddd}@media only screen and (max-width:480px){table{font-size:10px}td,th{padding:8px}}</style>
-                  <h3 class="h3 trip-h3">Nos Tarif</h3>
+                  <h3 class="h3 trip-h3">Nos Tarifs</h3>
                   <table>
                      <tr>
                         <th>Trajet</th>
