--- a/public/essaouira.html
+++ b/public/essaouira.html
@@ -348,7 +348,7 @@
                   <div class="rich-text-wrapper">
                     <div class="destinations-rich-text w-richtext">
                       <p>
-                        Nichée entre les vagues tumultueuses de l'océan Atlantique et les remparts chargés d'histoire, Essaouira séduit les voyageurs en quête d'une expérience authentique. Besoin d'un <strong>taxi à Essaouira</strong>? Réservez facilement et profitez de trajets confortables pour découvrir cette ville fascinante.
+                        Nichée entre les vagues tumultueuses de l'océan Atlantique et les remparts chargés d'histoire, Essaouira séduit les voyageurs en quête d'une expérience authentique. Besoin d'un <strong>taxi à Essaouira</strong> au Meilleur Prix? Réservez facilement et profitez de trajets confortables pour découvrir cette ville fascinante.
                       </p>
                       <p>
                         Cette cité côtière, inscrite au patrimoine mondial de l'UNESCO, mêle harmonieusement les traditions marocaines et une ambiance artistique vibrante. Que ce soit pour une excursion vers les plages ou une simple <strong>réservation de taxi Essaouira</strong>, chaque trajet vous plonge dans un univers unique.
