--- a/public/essaouira.html
+++ b/public/essaouira.html
@@ -366,7 +366,7 @@
                 <div id="w-node-_0181651a-de94-1cf4-5ed4-61e7d19f4060-29c2d988" class="activities-block">
                   <h2 class="h3 trip-h3">Activités à Essaouira</h2>
                   <p class="paragraph activities">
-                    Que vous soyez passionné d'histoire, amateur de plages magnifiques, ou friand de cuisine marocaine, Essaouira offre une multitude d'activités. Grâce à un <strong>taxi Essaouira</strong> disponible 24/7, explorez cette ville en toute sérénité.
+                    Que vous soyez passionné d'histoire, amateur de plages magnifiques, ou friand de cuisine marocaine, Essaouira offre une multitude d'activités. Grâce à un <strong>taxi Essaouira</strong> disponible 24/7 au Meilleur Prix, explorez cette ville en toute sérénité.
                   </p>
                 </div>
                 <div class="w-dyn-list">
