--- a/public/casablanca.html
+++ b/public/casablanca.html
@@ -9,15 +9,12 @@
    })(window,document,'script','dataLayer','GTM-ND4CTK2S');</script>
    <!-- End Google Tag Manager -->
       <meta charset="utf-8">
-      <title>Taxi Marrakech Casablanca aéroport</title>
+      <title>Réservez Votre Taxi à Casablanca – Transferts & Service Aéroport</title>
       <meta content="width=device-width,initial-scale=1" name="viewport">
-      <meta content="Casablanca | taxistomarrakech" property="og:title">
+      <meta content="Réservez Votre Taxi à Casablanca – Transferts & Service Aéroport" property="og:title">
       <meta content="/images/menulogo.webp" property="og:image">
-      <meta content="Casablanca | taxistomarrakech" property="twitter:title">
-      <meta name="description" lang="en" content="Book a reliable taxi service for hassle-free transfers between Marrakech and Essaouira. Our experienced drivers offer convenient transportation options, including Essaouira-Marrakech taxi services, transfers from Essaouira to Marrakech, and efficient taxis to and from Essaouira Airport. Discover the beauty of Morocco with our day trips from Marrakech to Essaouira. Whether you need a taxi from Casablanca Airport, want to explore Marrakech with a taxi, or plan a transfer from Marrakech to Essaouira, we've got you covered. Explore the best taxi options in Morocco with us!">
-      <meta name="description" lang="fr" content="Réservez un service de taxi fiable pour des transferts sans tracas entre Marrakech et Essaouira. Nos chauffeurs expérimentés offrent des options de transport pratiques, y compris des services de taxi Essaouira-Marrakech, des transferts d'Essaouira à Marrakech, et des taxis efficaces vers et depuis l'aéroport d'Essaouira. Découvrez la beauté du Maroc avec nos excursions d'une journée de Marrakech à Essaouira. Que vous ayez besoin d'un taxi depuis l'aéroport de Casablanca, que vous souhaitiez explorer Marrakech avec un taxi, ou planifier un transfert de Marrakech à Essaouira, nous avons tout ce qu'il vous faut. Explorez les meilleures options de taxi au Maroc avec nous !">
-      <meta name="description" lang="de" content="Buchen Sie einen zuverlässigen Taxiservice für problemlose Transfers zwischen Marrakesch und Essaouira. Unsere erfahrenen Fahrer bieten bequeme Transportmöglichkeiten, darunter Taxidienste von Essaouira nach Marrakesch, Transfers von Essaouira nach Marrakesch und effiziente Taxis zum und vom Flughafen Essaouira. Entdecken Sie die Schönheit Marokkos mit unseren Tagesausflügen von Marrakesch nach Essaouira. Ganz gleich, ob Sie ein Taxi vom Flughafen Casablanca benötigen, Marrakesch mit einem Taxi erkunden möchten oder einen Transfer von Marrakesch nach Essaouira planen, wir haben das Richtige für Sie. Entdecken Sie mit uns die besten Taximöglichkeiten in Marokko!">
-      <meta name="description" lang="es" content="Reserve un servicio de taxi fiable para traslados sin complicaciones entre Marrakech y Essaouira. Nuestros experimentados conductores ofrecen cómodas opciones de transporte, incluidos servicios de taxi Essaouira-Marrakech, traslados de Essaouira a Marrakech y taxis eficientes desde y hacia el aeropuerto de Essaouira. Descubra la belleza de Marruecos con nuestras excursiones de un día desde Marrakech a Essaouira. Si necesita un taxi desde el Aeropuerto de Casablanca, quiere explorar Marrakech con un taxi, o planear un traslado desde Marrakech a Essaouira, le tenemos cubierto. ¡Explore las mejores opciones de taxi en Marruecos con nosotros!">
+      <meta content="Réservez Votre Taxi à Casablanca – Transferts & Service Aéroport" property="twitter:title">
+      <meta name="description" lang="fr" content="Réservez votre Casablanca taxi en quelques clics. Transferts fiables vers Casablanca aéroport et autres destinations. Service rapide, sûr et confortable.">
       <meta content="/images/menulogo.webp" property="twitter:image">
       <link href="/css/style.css" rel="stylesheet" type="text/css">
       <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document)</script>
@@ -284,7 +281,7 @@
             <div class="dark-gradient less-dark"></div>
             <header style="opacity:0" class="container destinations-atf limit-container mobile-no-padding">
                <div class="destination-block">
-                  <h1 class="h1 light fade-up tricks">Casablanca</h1>
+                  <h1 class="h1 light fade-up tricks">Service de Taxi à Casablanca, Réservation Facile et Transfert Aéroport</h1>
                   <div class="destination-info-block">
                      <div class="info-block margin-right">
                         <div class="info-title">Destination</div>
