--- a/public/casablanca.html
+++ b/public/casablanca.html
@@ -277,7 +277,7 @@
             </div>
          </div>
          <section class="section atf destination-atf">
-            <div class="intro-mask"><img src="/images/casablanca.webp" loading="lazy" alt="mosquée hassan 2" srcset="/images/casablanca_500.webp 500w, /images/casablanca_800.webp 800w, /images/casablanca_1080.webp 1080w" class="intro-image"></div>
+            <div class="intro-mask"><img src="/images/casablanca.webp" loading="lazy" alt="taxi casablanca" srcset="/images/casablanca_500.webp 500w, /images/casablanca_800.webp 800w, /images/casablanca_1080.webp 1080w" class="intro-image"></div>
             <div class="dark-gradient less-dark"></div>
             <header style="opacity:0" class="container destinations-atf limit-container mobile-no-padding">
                <div class="destination-block">
@@ -317,128 +317,95 @@
          </section>
          <section class="section">
             <div id="apercu" class="container limit-container">
-               <div class="w-layout-grid trip-grid-iten">
-                  <div class="trip-details-block">
-                     <h2 class="h3 trip-h3 mobile-bottom-padding">Ville d'essaouira</h2>
-                     <div class="trip-info-block">
-                        <div class="trip-info-text">Site</div>
-                        <div class="trip-info-text caps">Sur la côte atlantique du Maroc</div>
-                     </div>
-                     <div class="trip-info-block">
-                        <div class="trip-info-text">Autre nom</div>
-                        <div class="trip-info-text caps">Capitale économique</div>
-                     </div>
-                     <div class="trip-info-block">
-                        <div class="trip-info-text">Authenticité</div>
-                        <div class="trip-info-text caps">Fondée au fin de VII° siècle</div>
-                     </div>
-                     <div class="trip-info-block">
-                        <div class="trip-info-text">Nombre d'habitants</div>
-                        <div class="trip-info-text caps">3,36 millions habitants</div>
-                     </div>
-                  </div>
-                  <div class="trip-highlights-block show-up">
-                     <div class="word-mask">
-                        <h2 class="h2 trip-h3 hide-mobile fade-up3 tricks">Ville de Casablanca</h2>
-                     </div>
-                     <div class="rich-text-wrapper">
-                        <div class="destinations-rich-text w-richtext">
-                           <p>Casablanca, la métropole dynamique du Maroc, se démarque par son ambiance cosmopolite, ses gratte-ciel imposants et son littoral animé.</p>
-                           <p>‍</p>
-                           <p>Centre financier du pays, la ville allie modernité et histoire avec des quartiers chics, une médina préservée et la célèbre mosquée Hassan II, offrant ainsi une expérience urbaine fascinante entre tradition et progrès.</p>
+                <div class="w-layout-grid trip-grid-iten">
+                    <div class="trip-details-block">
+                        <h2 class="h3 trip-h3 mobile-bottom-padding">Casablanca</h2>
+                        <div class="trip-info-block">
+                            <div class="trip-info-text">Emplacement</div>
+                            <div class="trip-info-text caps">Sur la côte atlantique du Maroc</div>
                         </div>
-                     </div>
-                  </div>
-               </div>
+                        <div class="trip-info-block">
+                            <div class="trip-info-text">Atout majeur</div>
+                            <div class="trip-info-text caps">Hub de transport avec taxis fiables</div>
+                        </div>
+                        <div class="trip-info-block">
+                            <div class="trip-info-text">Spécialité</div>
+                            <div class="trip-info-text caps">Réservations simples pour taxis</div>
+                        </div>
+                        <div class="trip-info-block">
+                            <div class="trip-info-text">Population</div>
+                            <div class="trip-info-text caps">3,36 millions d'habitants</div>
+                        </div>
+                    </div>
+                    <div class="trip-highlights-block show-up">
+                        <div class="word-mask">
+                            <h2 class="h2 trip-h3 hide-mobile fade-up3 tricks">Ville de Casablanca et ses Taxis</h2>
+                        </div>
+                        <div class="rich-text-wrapper">
+                            <div class="destinations-rich-text w-richtext">
+                                <p>Casablanca, le cœur économique du Maroc, est réputée pour sa modernité et ses services de transport de qualité, y compris les taxis.</p>
+                                <p>‍</p>
+                                <p>Réservez un taxi Casablanca pour un trajet confortable vers l'aéroport ou d'autres destinations populaires. Profitez de la combinaison parfaite entre efficacité moderne et accueil traditionnel marocain.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-         </section>
-         <section id="Activities" class="section light-bg-2">
+        </section>
+        <section id="Activities" class="section light-bg-2">
             <div class="container limit-container">
-               <div class="w-layout-grid activities-grid">
-                  <div id="w-node-_0181651a-de94-1cf4-5ed4-61e7d19f4060-29c2d988" class="activities-block">
-                     <h2 class="h3 trip-h3">Activities</h2>
-                     <p class="paragraph activities">Explorez ses gratte-ciel imposants, découvrez la médina préservée, flânez le long du front de mer animé, et visitez la magnifique mosquée Hassan II.</p>
-                  </div>
-                  <div class="w-dyn-list">
-                     <div role="list" class="activities-list-grid w-dyn-items">
-                        <div role="listitem" class="w-dyn-item">
-                           <div style="opacity:0;display:none" class="center-following-photo">
-                              <div class="activities-tilted-photo"><img src="/images/tajine.webp" loading="lazy" alt="tajine" class="act-photo"></div>
-                           </div>
-                           <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0853" style="opacity:.7" class="activity-block">
-                              <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0854" class="activity">
-                                 <div class="icon-wrap dark"><img src="/images/pizza.svg" loading="eager" alt="icon" class="icon smaller"></div>
-                                 <div class="text-block dark-grey">Cuisine traditionnelle</div>
-                              </div>
-                              <div class="horizontal-line underline"></div>
-                           </div>
+                <div class="w-layout-grid activities-grid">
+                    <div id="w-node-_0181651a-de94-1cf4-5ed4-61e7d19f4060-29c2d988" class="activities-block">
+                        <h2 class="h3 trip-h3">Activités et Transports</h2>
+                        <p class="paragraph activities">
+                            Explorez les quartiers emblématiques de Casablanca grâce à un taxi réservé en quelques clics. Découvrez la mosquée Hassan II et profitez des plages en toute sérénité.
+                        </p>
+                    </div>
+                    <div class="w-dyn-list">
+                        <div role="list" class="activities-list-grid w-dyn-items">
+                            <div role="listitem" class="w-dyn-item">
+                                <div style="opacity:0;display:none" class="center-following-photo">
+                                    <div class="activities-tilted-photo"><img src="/images/tajine.webp" loading="lazy" alt="tajine" class="act-photo"></div>
+                                </div>
+                                <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0853" style="opacity:.7" class="activity-block">
+                                    <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0854" class="activity">
+                                        <div class="icon-wrap dark"><img src="/images/pizza.svg" loading="eager" alt="icon" class="icon smaller"></div>
+                                        <div class="text-block dark-grey">Gastronomie marocaine</div>
+                                    </div>
+                                    <div class="horizontal-line underline"></div>
+                                </div>
+                            </div>
+                            <div role="listitem" class="w-dyn-item">
+                                <div style="opacity:0;display:none" class="center-following-photo">
+                                    <div class="activities-tilted-photo"><img src="/images/casablancaplage.webp" loading="lazy" alt="plage Casablanca" class="act-photo"></div>
+                                </div>
+                                <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0853" style="opacity:.7" class="activity-block">
+                                    <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0854" class="activity">
+                                        <div class="icon-wrap dark"><img src="/images/beach.svg" loading="eager" alt="icon" class="icon smaller"></div>
+                                        <div class="text-block dark-grey">Plages et loisirs</div>
+                                    </div>
+                                    <div class="horizontal-line underline"></div>
+                                </div>
+                            </div>
+                            <div role="listitem" class="w-dyn-item">
+                                <div style="opacity:0;display:none" class="center-following-photo">
+                                    <div class="activities-tilted-photo"><img src="/images/chef.svg" loading="lazy" alt="chef" class="act-photo"></div>
+                                </div>
+                                <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0853" style="opacity:.7" class="activity-block">
+                                    <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0854" class="activity">
+                                        <div class="icon-wrap dark"><img src="/images/chef.svg" loading="eager" alt="icon" class="icon smaller"></div>
+                                        <div class="text-block dark-grey">Expériences culinaires</div>
+                                    </div>
+                                    <div class="horizontal-line underline"></div>
+                                </div>
+                            </div>
                         </div>
-                        <div role="listitem" class="w-dyn-item">
-                           <div style="opacity:0;display:none" class="center-following-photo">
-                              <div class="activities-tilted-photo"><img src="/images/casablancaplage.webp" loading="lazy" alt="plage d'essaouira" class="act-photo"></div>
-                           </div>
-                           <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0853" style="opacity:.7" class="activity-block">
-                              <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0854" class="activity">
-                                 <div class="icon-wrap dark"><img src="/images/beach.svg" loading="eager" alt="icon" class="icon smaller"></div>
-                                 <div class="text-block dark-grey">Des plages</div>
-                              </div>
-                              <div class="horizontal-line underline"></div>
-                           </div>
-                        </div>
-                        <div role="listitem" class="w-dyn-item">
-                           <div style="opacity:0;display:none" class="center-following-photo">
-                              <div class="activities-tilted-photo"><img src="/images/tajine.webp" loading="lazy" alt="tajine marocaine" class="act-photo"></div>
-                           </div>
-                           <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0853" style="opacity:.7" class="activity-block">
-                              <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0854" class="activity">
-                                 <div class="icon-wrap dark"><img src="/images/chef.svg" loading="eager" alt="icon" class="icon smaller"></div>
-                                 <div class="text-block dark-grey">Cuisine marocaine</div>
-                              </div>
-                              <div class="horizontal-line underline"></div>
-                           </div>
-                        </div>
-                        <div role="listitem" class="w-dyn-item">
-                           <div style="opacity:0;display:none" class="center-following-photo">
-                              <div class="activities-tilted-photo"><img src="/images/casablancaplage.webp" loading="lazy" alt="plage d'essaouira" class="act-photo"></div>
-                           </div>
-                           <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0853" style="opacity:.7" class="activity-block">
-                              <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0854" class="activity">
-                                 <div class="icon-wrap dark"><img src="/images/tree.svg" loading="eager" alt="icon" class="icon smaller"></div>
-                                 <div class="text-block dark-grey">La nature</div>
-                              </div>
-                              <div class="horizontal-line underline"></div>
-                           </div>
-                        </div>
-                        <div role="listitem" class="w-dyn-item">
-                           <div style="opacity:0;display:none" class="center-following-photo">
-                              <div class="activities-tilted-photo"><img src="/images/shopping.webp" loading="lazy" alt="magazin" class="act-photo"></div>
-                           </div>
-                           <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0853" style="opacity:.7" class="activity-block">
-                              <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0854" class="activity">
-                                 <div class="icon-wrap dark"><img src="/images/bag.svg" loading="eager" alt="icon" class="icon smaller"></div>
-                                 <div class="text-block dark-grey">Le Shopping</div>
-                              </div>
-                              <div class="horizontal-line underline"></div>
-                           </div>
-                        </div>
-                        <div role="listitem" class="w-dyn-item">
-                           <div style="opacity:0;display:none" class="center-following-photo">
-                              <div class="activities-tilted-photo"><img src="/images/active.webp" loading="lazy" alt="homme qui cour" sizes="100vw" srcset="/images/active_500.webp 500w, /images/active_800.webp 800w, /images/active_1080.webp" class="act-photo"></div>
-                           </div>
-                           <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0853" style="opacity:.7" class="activity-block">
-                              <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0854" class="activity">
-                                 <div class="icon-wrap dark"><img src="/images/running.svg" loading="eager" alt="icon" class="icon smaller"></div>
-                                 <div class="text-block dark-grey">Active</div>
-                              </div>
-                              <div class="horizontal-line underline"></div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
+                    </div>
+                </div>
+                <img src="/images/line.svg" loading="lazy" alt="icon" class="trip-iten-squiqqle">
             </div>
-            <img src="/images/line.svg" loading="lazy" alt="icon" class="trip-iten-squiqqle">
-         </section>
+        </section>
+        
          <section class="section">
             <div class="container limit-container">
                <div id="tarif" class="w-layout-grid activities-grid set">
