--- a/public/casablanca.html
+++ b/public/casablanca.html
@@ -345,7 +345,7 @@
                             <div class="destinations-rich-text w-richtext">
                                 <p>Casablanca, le cœur économique du Maroc, est réputée pour sa modernité et ses services de transport de qualité, y compris les taxis.</p>
                                 <p>‍</p>
-                                <p>Réservez un taxi Casablanca pour un trajet confortable vers l'aéroport ou d'autres destinations populaires. Profitez de la combinaison parfaite entre efficacité moderne et accueil traditionnel marocain.</p>
+                                <p><strong>Réservez un taxi Casablanca</strong> pour un trajet confortable vers <strong>l'aéroport</strong> ou d'autres destinations populaires. Profitez de la combinaison parfaite entre efficacité moderne et accueil traditionnel marocain.</p>
                             </div>
                         </div>
                     </div>
