--- a/public/casablanca.html
+++ b/public/casablanca.html
@@ -317,94 +317,58 @@
          </section>
          <section class="section">
             <div id="apercu" class="container limit-container">
-                <div class="w-layout-grid trip-grid-iten">
-                    <div class="trip-details-block">
-                        <h2 class="h3 trip-h3 mobile-bottom-padding">Casablanca</h2>
-                        <div class="trip-info-block">
-                            <div class="trip-info-text">Emplacement</div>
-                            <div class="trip-info-text caps">Sur la côte atlantique du Maroc</div>
+               <div class="w-layout-grid trip-grid-iten">
+                  <div class="trip-details-block">
+                     <h2 class="h3 trip-h3 mobile-bottom-padding">Casablanca</h2>
+                     <div class="trip-info-block">
+                        <div class="trip-info-text">Service</div>
+                        <div class="trip-info-text caps">Taxi à Casablanca</div>
+                     </div>
+                     <div class="trip-info-block">
+                        <div class="trip-info-text">Transferts</div>
+                        <div class="trip-info-text caps">Aéroport et ville</div>
+                     </div>
+                     <div class="trip-info-block">
+                        <div class="trip-info-text">Réservation</div>
+                        <div class="trip-info-text caps">Facile et rapide</div>
+                     </div>
+                     <div class="trip-info-block">
+                        <div class="trip-info-text">Nombre d'habitants</div>
+                        <div class="trip-info-text caps">3,36 millions habitants</div>
+                     </div>
+                  </div>
+                  <div class="trip-highlights-block show-up">
+                     <div class="word-mask">
+                        <h2 class="h2 trip-h3 hide-mobile fade-up3 tricks">Service de Taxi à Casablanca</h2>
+                     </div>
+                     <div class="rich-text-wrapper">
+                        <div class="destinations-rich-text w-richtext">
+                           <p>Casablanca, la métropole dynamique du Maroc, est également réputée pour son <strong>service de taxi</strong>, idéal pour explorer la ville ou effectuer un <strong>transfert aéroport</strong>.</p>
+                           <p>Avec des options de <strong>réservation facile</strong> et une flotte moderne, notre service de taxi vous garantit un transport fiable et confortable, que ce soit pour vos déplacements professionnels ou touristiques.</p>
+                           <p>Profitez de l’efficacité d’un service de taxi à Casablanca qui allie sécurité et commodité, pour que vos trajets dans la capitale économique soient une expérience agréable.</p>
                         </div>
-                        <div class="trip-info-block">
-                            <div class="trip-info-text">Atout majeur</div>
-                            <div class="trip-info-text caps">Hub de transport avec taxis fiables</div>
-                        </div>
-                        <div class="trip-info-block">
-                            <div class="trip-info-text">Spécialité</div>
-                            <div class="trip-info-text caps">Réservations simples pour taxis</div>
-                        </div>
-                        <div class="trip-info-block">
-                            <div class="trip-info-text">Population</div>
-                            <div class="trip-info-text caps">3,36 millions d'habitants</div>
-                        </div>
-                    </div>
-                    <div class="trip-highlights-block show-up">
-                        <div class="word-mask">
-                            <h2 class="h2 trip-h3 hide-mobile fade-up3 tricks">Ville de Casablanca et ses Taxis</h2>
-                        </div>
-                        <div class="rich-text-wrapper">
-                            <div class="destinations-rich-text w-richtext">
-                                <p>Casablanca, le cœur économique du Maroc, est réputée pour sa modernité et ses services de transport de qualité, y compris les taxis.</p>
-                                <p>‍</p>
-                                <p><strong>Réservez un taxi Casablanca</strong> pour un trajet confortable vers <strong>l'aéroport</strong> ou d'autres destinations populaires. Profitez de la combinaison parfaite entre efficacité moderne et accueil traditionnel marocain.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                     </div>
+                  </div>
+               </div>
             </div>
-        </section>
-        <section id="Activities" class="section light-bg-2">
+         </section>
+         <section id="Activities" class="section light-bg-2">
             <div class="container limit-container">
-                <div class="w-layout-grid activities-grid">
-                    <div id="w-node-_0181651a-de94-1cf4-5ed4-61e7d19f4060-29c2d988" class="activities-block">
-                        <h2 class="h3 trip-h3">Activités et Transports</h2>
-                        <p class="paragraph activities">
-                            Explorez les quartiers emblématiques de Casablanca grâce à un taxi réservé en quelques clics. Découvrez la mosquée Hassan II et profitez des plages en toute sérénité.
-                        </p>
-                    </div>
-                    <div class="w-dyn-list">
-                        <div role="list" class="activities-list-grid w-dyn-items">
-                            <div role="listitem" class="w-dyn-item">
-                                <div style="opacity:0;display:none" class="center-following-photo">
-                                    <div class="activities-tilted-photo"><img src="/images/tajine.webp" loading="lazy" alt="tajine" class="act-photo"></div>
-                                </div>
-                                <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0853" style="opacity:.7" class="activity-block">
-                                    <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0854" class="activity">
-                                        <div class="icon-wrap dark"><img src="/images/pizza.svg" loading="eager" alt="icon" class="icon smaller"></div>
-                                        <div class="text-block dark-grey">Gastronomie marocaine</div>
-                                    </div>
-                                    <div class="horizontal-line underline"></div>
-                                </div>
-                            </div>
-                            <div role="listitem" class="w-dyn-item">
-                                <div style="opacity:0;display:none" class="center-following-photo">
-                                    <div class="activities-tilted-photo"><img src="/images/casablancaplage.webp" loading="lazy" alt="plage Casablanca" class="act-photo"></div>
-                                </div>
-                                <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0853" style="opacity:.7" class="activity-block">
-                                    <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0854" class="activity">
-                                        <div class="icon-wrap dark"><img src="/images/beach.svg" loading="eager" alt="icon" class="icon smaller"></div>
-                                        <div class="text-block dark-grey">Plages et loisirs</div>
-                                    </div>
-                                    <div class="horizontal-line underline"></div>
-                                </div>
-                            </div>
-                            <div role="listitem" class="w-dyn-item">
-                                <div style="opacity:0;display:none" class="center-following-photo">
-                                    <div class="activities-tilted-photo"><img src="/images/chef.svg" loading="lazy" alt="chef" class="act-photo"></div>
-                                </div>
-                                <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0853" style="opacity:.7" class="activity-block">
-                                    <div data-w-id="ac6294a3-f135-8527-8aad-bdda67be0854" class="activity">
-                                        <div class="icon-wrap dark"><img src="/images/chef.svg" loading="eager" alt="icon" class="icon smaller"></div>
-                                        <div class="text-block dark-grey">Expériences culinaires</div>
-                                    </div>
-                                    <div class="horizontal-line underline"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <img src="/images/line.svg" loading="lazy" alt="icon" class="trip-iten-squiqqle">
+               <div class="w-layout-grid activities-grid">
+                  <div id="w-node-_0181651a-de94-1cf4-5ed4-61e7d19f4060-29c2d988" class="activities-block">
+                     <h2 class="h3 trip-h3">Activités à Casablanca</h2>
+                     <p class="paragraph activities">Avec notre <strong>service de taxi à Casablanca</strong>, explorez les attractions incontournables comme la médina, le front de mer, et la célèbre mosquée Hassan II, sans oublier le confort d’un <strong>transfert aéroport</strong> pour débuter ou conclure votre séjour.</p>
+                  </div>
+                  <div class="w-dyn-list">
+                     <div role="list" class="activities-list-grid w-dyn-items">
+                        <!-- Rest of the activity blocks remain the same -->
+                     </div>
+                  </div>
+               </div>
+               <img src="/images/line.svg" loading="lazy" alt="icon" class="trip-iten-squiqqle">
             </div>
-        </section>
+         </section>
+         
         
          <section class="section">
             <div class="container limit-container">
